# gameLife

./: .gitattributes  .gitignore  .gitmodules  README.md  gameLife.sln
gameLife/: .clang-tidy  CMakeLists.txt  CMakePresets.json  gameLife.vcxproj  gameLife.vcxproj.filters
gameLife/include/gameLife/: board.hpp  cell.hpp  game.hpp  menu.hpp  settings.hpp
gameLife/src/: CMakeLists.txt  board.hpp  cell.hpp  game.hpp  main.cpp  menu.hpp  settings.hpp
